# TDL_Terminal-DirectMedia-Library

./: .gitignore  CMakeLists.txt  CODING_STYLE.md  CONTRIBUTING.md  README.md  sonar-project.properties
.github/workflows/: build.yml  ci.yml  docs.yml  sonarCube.yml
cmake/: TDLConfig.cmake.in  uninstall.cmake
doc/Doxyfile/: Doxyfile
docs/: Doxyfile
docs/source/: conf.py  index.rst
docs/source/Reference/: Reference.rst
docs/source/Reference/Graphics/: Display.rst  Framebuffer.rst  Graphics.rst
docs/source/Reference/Utils/: Utils.rst
docs/source/Reference/Utils/Matrix/: Matrix.rst
example/: CMakeLists.txt
example/anim/: main.cpp
example/bird/: main.cpp
example/fileSystem/: files.cpp  files.hpp  main.cpp
example/font/: main.cpp
example/game/: main.cpp
example/imgViewer/: main.cpp
example/mouse/: main.cpp
example/paint/: main.cpp
example/sound/: main.cpp
example/ttyBird/: main.cpp
include/TDL/: Display.hpp  Rect.hpp  Sound.hpp  Sprite.hpp  TerminalDisplay.hpp  Text.hpp  Vector.hpp  Window.hpp
include/TDL/Drawable/: Drawable.hpp
include/TDL/Drawable/Texture/: Texture.hpp  TextureLoader.hpp
include/TDL/Event/: Event.hpp  EventNotifier.hpp  InputEventCode.hpp
include/TDL/Event/Input/: InputEvent.hpp
include/TDL/Event/Input/Module/: Keyboard.hpp  Mouse.hpp  keymap.hpp
include/TDL/Event/Mouse/: EventMouseData.hpp  IMouse.hpp  Imouse.hpp
include/TDL/Event/Mouse/Linux/: GpmMouse.hpp
include/TDL/Event/Mouse/linux/: Mouse.hpp  mouse.hpp
include/TDL/Graphics/Display/: Display.hpp
include/TDL/Graphics/Display/Strategy/: AsciiMethode.hpp  IDrawMethode.hpp  SixelMethode.hpp  TtyMethode.hpp
include/TDL/Graphics/Drawable/: ADrawable.hpp  Drawable.hpp  IDrawable.hpp
include/TDL/Graphics/Drawable/Pixel/: Pixel.hpp
include/TDL/Graphics/Drawable/Sprite/: Sprite.hpp
include/TDL/Graphics/Drawable/Text/: Text.hpp
include/TDL/Graphics/FrameBuffer/: FrameBuffer.hpp
include/TDL/Graphics/FrameBuffer/Feature/: Placeable.hpp  Transformation.hpp
include/TDL/Graphics/Widget/: Widget.hpp
include/TDL/Graphics/Widget/Default/: Cursor.json
include/TDL/Graphics/Window/: AWindow.hpp  Decorator.hpp  TerminalDisplay.hpp  Window.hpp
include/TDL/Input/: EInput.hpp  Event.hpp  InputKeyboard.hpp  inputKeyboard.hpp
include/TDL/Input/Module/: Mouse.hpp
include/TDL/Interrupt/: InterruptManager.hpp
include/TDL/Math/: Rect.hpp  Vector.hpp
include/TDL/Matrix/: PixelMatrix.hpp  Transform.hpp  Transformation.hpp
include/TDL/Pixel/: Pixel.hpp
include/TDL/Pty/: SubShell.hpp
include/TDL/Signal/: SignalHandler.hpp
include/TDL/Sound/: OpenAlWrapper.hpp  Sound.hpp
include/TDL/Sprite/: Sprite.hpp
include/TDL/Text/: Text.hpp
include/TDL/Text/Font/: Font.hpp
include/TDL/Utils/: AnsiiCode.hpp  Fps.hpp  SubShell.hpp  dynLibLoader.hpp
include/TDL/Utils/Math/: Rect.hpp  Vector.hpp
include/TDL/Utils/Matrix/: Matrix.hpp  PixelMatrix.hpp  Transform.hpp
include/TDL/Utils/Memory/: Arena.hpp
include/TDL/Utils/Parser/: Json.hpp
include/TDL/Utils/Signal/: SignalHandler.hpp
include/TDL/Utils/Thread/: ThreadSafeQueue.hpp
include/TDL/Window/: AWindow.hpp  AnsiiCode.hpp  TerminalDisplay.hpp  TtyDisplay.hpp  Window.hpp  ansiiCode.hpp  terminalDisplay.hpp  window.hpp
include/tdl/Event/: Event.hpp
include/tdl/Event/Mouse/: EventMouseData.hpp  Imouse.hpp
include/tdl/Event/Mouse/linux/: mouse.hpp
include/tdl/Input/: inputKeyboard.hpp  inputMouse.hpp
include/tdl/Math/: UnitConverter.hpp
include/tdl/Signal/: SignalHandler.hpp
include/tdl/Sprite/: Sprite.hpp
include/tdl/Utils/: SubShell.hpp
include/tdl/Window/: AWindow.hpp  ansiiCode.hpp  terminalDisplay.hpp  window.hpp  windowBase.hpp
source/TDL/Drawable/Texture/: Texture.cpp  TextureLoader.cpp
source/TDL/Event/: Event.cpp  EventNotifier.cpp
source/TDL/Event/Input/: InputEvent.cpp
source/TDL/Event/Input/Module/: Keyboard.cpp  Mouse.cpp
source/TDL/Event/Mouse/Linux/: GpmMouse.cpp  Mouse.cpp
source/TDL/Event/mouse/linux/: mouse.cpp
source/TDL/Graphics/Display/: Display.cpp
source/TDL/Graphics/Display/Strategy/: AsciiMethode.cpp  SixelMethode.cpp  TtyMethode.cpp
source/TDL/Graphics/Display/Strategy/Ascii/: AsciiMethode.cpp  CMakeLists.txt  Entrypoint.cpp
source/TDL/Graphics/Display/Widget/: Widget.cpp
source/TDL/Graphics/Drawable/: ADrawable.cpp
source/TDL/Graphics/FrameBuffer/: FrameBuffer.cpp
source/TDL/Graphics/Window/: AWindow.cpp  Decorator.cpp  TtyDisplay.cpp  Window.cpp
source/TDL/Input/: Event.cpp  Input.cpp  input.cpp
source/TDL/Input/Module/: Keyboard.cpp
source/TDL/Interrupt/: InterruptManager.cpp
source/TDL/Matrix/: PixelMatrix.cpp  Transform.cpp  Transformation.cpp
source/TDL/Pixel/: Pixel.cpp
source/TDL/Pty/: SubShell.cpp
source/TDL/Signal/: SignalHandler.cpp
source/TDL/Sound/: sound.cpp
source/TDL/Sprite/: Sprite.cpp
source/TDL/Text/: Text.cpp
source/TDL/Text/Font/: Font.cpp
source/TDL/Utils/: SubShell.cpp
source/TDL/Utils/Matrix/: PixelMatrix.cpp  Transform.cpp
source/TDL/Utils/Signal/: SignalHandler.cpp
source/TDL/Window/: AWindow.cpp  AnsiiCode.cpp  TerminalDisplay.cpp  TtyDisplay.cpp  Window.cpp  ansiiCode.cpp  terminalDisplay.cpp  window.cpp
source/TDL/sound/: sound.cpp
source/tdl/Drawable/Texture/: Texture.cpp  TextureLoader.cpp
source/tdl/Event/: Event.cpp
source/tdl/Input/: input.cpp  inputMouse.cpp
source/tdl/Matrix/: PixelMatrix.cpp  Transformation.cpp
source/tdl/Signal/: SignalHandler.cpp
source/tdl/Sprite/: Sprite.cpp
source/tdl/Text/: Text.cpp
source/tdl/Text/Font/: Font.cpp
source/tdl/Utils/: SubShell.cpp
source/tdl/Window/: AWindow.cpp  ansiiCode.cpp  terminalDisplay.cpp  window.cpp  windowBase.cpp  window_anssi.cpp
tests/perf/: perf.sh
tests/unit_test/: CMakeLists.txt  rect.test.cpp  vector.test.cpp
tests/unit_test/Drawable/: texture.test.cpp
tests/unit_test/Input/: input.test.cpp
tests/unit_test/Matrix/: pixelMatrix.test.cpp
tests/unit_test/Pixel/: pixel.test.cpp
tests/unit_test/Sprite/: sprite.test.cpp
tests/unit_test/Window/: window.test.cpp  windowBase.test.cpp
(+19 files in other folders)
